--- a/index.html
+++ b/index.html
@@ -4,65 +4,93 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+      integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="logo" href="./index.html"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+        <ul class="navigation-list">
+          <li><a class="navigation-list-item" href="">Studio</a></li>
+          <li><a class="navigation-list-item" href="">Portfolio</a></li>
+          <li><a class="navigation-list-item" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="contacts-item" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contacts-item" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-one">
+        <h1 class="section-one-hedder">
+          Effective Solutions for Your Business
+        </h1>
+        <button class="section-one-button" type="button">
+          <span class="section-one-button-text">Order Service</span>
+        </button>
       </section>
-      <section>
+      <section class="section-two">
         <h2 hidden>Skills</h2>
-        <ul>
+        <ul class="section-two-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-two-list-heder">Strategy</h3>
+            <p class="section-two-list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-two-list-heder">Punctuality</h3>
+            <p class="section-two-list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-two-list-heder">Diligence</h3>
+            <p class="section-two-list-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-two-list-heder">Technologies</h3>
+            <p class="section-two-list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section-three">
+        <h2 class="section-three-header">Our Team</h2>
+        <ul class="section-three-list">
           <li>
             <img
               src="./images/img-1.jpg"
@@ -70,8 +98,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-three-list-header">Mark Guerrero</h3>
+            <p class="section-three-list-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -80,8 +108,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-three-list-header">Tom Ford</h3>
+            <p class="section-three-list-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -90,8 +118,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-three-list-header">Camila Garcia</h3>
+            <p class="section-three-list-text">Marketing</p>
           </li>
           <li>
             <img
@@ -100,15 +128,77 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-three-list-header">Daniel Wilson</h3>
+            <p class="section-three-list-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="section-four">
+        <h2 class="section-four-header">Our Portfolio</h2>
+        <ul class="section-four-list">
+          <li>
+            <img
+              src="./images/img-5.jpg"
+              alt="scrin bank app"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-four-list-header">Banking App</h3>
+            <p class="section-four-list-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-6.jpg"
+              alt="scan qr code"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-four-list-header">Cashless Payment</h3>
+            <p class="section-four-list-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-7.jpg"
+              alt="laptop"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-four-list-header">Meditation App</h3>
+            <p class="section-four-list-text">App</p>
+          </li>
+          <li>
+            <img src="./images/img-8.jpg" alt="car" width="360" height="300" />
+            <h3 class="section-four-list-header">Taxi Service</h3>
+            <p class="section-four-list-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-9.jpg"
+              alt="phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-four-list-header">Screen Illustrations</h3>
+            <p class="section-four-list-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-10.jpg"
+              alt="women"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-four-list-header">Online Courses</h3>
+            <p class="section-four-list-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+        ><span class="footer-logo-part">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
