--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
   <body>
     <header class="header">
       <nav>
-        <a class="logo" href="./index.html"
-          ><span class="logo-part">Web</span>Studio</a
-        >
         <ul class="navigation-list">
+          <li>
+            <a class="logo" href="./index.html"
+              >Web<span class="logo-part">Studio</span></a
+            >
+          </li>
           <li><a class="navigation-list-item" href="">Studio</a></li>
           <li><a class="navigation-list-item" href="">Portfolio</a></li>
           <li><a class="navigation-list-item" href="">Contacts</a></li>
@@ -91,7 +93,7 @@
       <section class="section-three">
         <h2 class="section-three-header">Our Team</h2>
         <ul class="section-three-list">
-          <li>
+          <li class="section-three-list-item">
             <img
               src="./images/img-1.jpg"
               alt="Mark Guerrero"
@@ -101,7 +103,7 @@
             <h3 class="section-three-list-header">Mark Guerrero</h3>
             <p class="section-three-list-text">Product Designer</p>
           </li>
-          <li>
+          <li class="section-three-list-item">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford"
@@ -111,7 +113,7 @@
             <h3 class="section-three-list-header">Tom Ford</h3>
             <p class="section-three-list-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="section-three-list-item">
             <img
               src="./images/img-3.jpg"
               alt="Camila Garcia"
@@ -121,7 +123,7 @@
             <h3 class="section-three-list-header">Camila Garcia</h3>
             <p class="section-three-list-text">Marketing</p>
           </li>
-          <li>
+          <li class="section-three-list-item">
             <img
               src="./images/img-4.jpg"
               alt="Daniel Wilson"
@@ -196,7 +198,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-part">Web</span>Studio</a
+        >Web<span class="footer-logo-part">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
