--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           >Web<span class="logo-part">Studio</span></a
         >
         <ul class="navigation-list">
-          <li><a class="navigation-list-item" href="">Studio</a></li>
+          <li>
+            <a class="navigation-list-item" href="./index.html">Studio</a>
+          </li>
           <li><a class="navigation-list-item" href="">Portfolio</a></li>
           <li><a class="navigation-list-item" href="">Contacts</a></li>
         </ul>
